--- a/Laboratorium 1 - Rozgrzewka/index.html
+++ b/Laboratorium 1 - Rozgrzewka/index.html
@@ -2,24 +2,32 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
-        <title>Lab1</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title> Rozgrzewka </title>
     </head>
 
-    <input type="text" id="liczba1">
-    <input type="text" id="liczba2">
-    <input type="text" id="liczba3">
+    <header>
+        <h1> Kalkulator </h1>
+    </header>
 
-    <button id="przelicz">Przelicz</button>
-    <div id="suma">Suma</div>
-    <div id="srednia">Średnia</div>
-    <div id="min">Min</div>
-    <div id="max">Max</div>
-
-    <script src="main.js" type="text/javascript"></script>
-    <script type="text/javascript"></script>
     <body>
-
+        <div class="content">
+            <div class="input">
+                <input type="text" id="liczba1">
+                <input type="text" id="liczba2">
+                <input type="text" id="liczba3">
+                <button id="przelicz">Przelicz</button>
+            </div>
+            <div class="output">
+                <div id="suma">Suma: </div>
+                <div id="srednia">Średnia: </div>
+                <div id="min">Min: </div>
+                <div id="max">Max: </div>
+            </div>
+            <script src="main.js" type="text/javascript"></script>
+            <script type="text/javascript"></script>
+        </div>
     </body>
 </html>
