--- a/Laboratorium 2 - Slider/index.html
+++ b/Laboratorium 2 - Slider/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-        <title>Lab2</title>
+        <title>Slider</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -45,7 +45,7 @@
         </div>
 
         <div style="text-align:center">
-            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot active" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
