--- a/Laboratorium 6 - Ball In The Hole/index.html
+++ b/Laboratorium 6 - Ball In The Hole/index.html
@@ -7,12 +7,25 @@
     <link rel="stylesheet" href="style.css">
     <title>Ball In The Hole</title>
 </head>
-
-<header>
-    <h1> Ball in the hole </h1>
-</header>
-
 <body>
-    <script src="index.js"></script>
-</body>
+    <header> Ball in the hole </header>
+    <div class="score_board">
+      <div id="timer_container">Time: <span id="timer">00:00</span></div>
+      <div id="score_container">Score: <span id="score">0</span></div>
+      <div id="highscore_container">Highscore: <span id="highscore">0</span></div>
+    </div>
+    <div class="game_board">
+      <div id="instructionForm">
+        <h1>
+          Before start make sure that you hold your phone in portrait
+          orientation.<br />Your task is to put the ball in the hole,<br />as many times as possible in 1 minute.
+        </h1>
+        <button id="start">Start game!</button>
+      </div>
+      <div class="container">
+        <div id="ball"></div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
