--- a/Laboratorium 8 - Canvas/index.html
+++ b/Laboratorium 8 - Canvas/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="bar">
     <div class="input_data">
-      Number of balls: <input type="number" id="numBalls" value="">
+      Number of balls: <input type="number" id="numBalls" value="10">
       Distance: <input type="number" id="dist" value="160">
     </div>
     <div class="buttons">
